docs: add ADR for JVM profiling tooling (#145)
* docs: add ADR for JVM profiling tooling

Add ADR 0003 documenting the decision to use async-profiler and Eclipse
MAT for JVM profiling and memory leak diagnosis. This establishes standard
tooling for investigating performance issues like the memory leak in #138.

Changes:
- ADR 0003: async-profiler and Eclipse MAT for JVM Profiling
- Configure JVM flags in build.sbt for GC logging and heap dumps
- Add profiling section to CLAUDE.md with usage instructions
- Update .gitignore for heap dumps and GC logs
- Create heap-dumps directory for local profiling

Related to #138

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* fix: use modern sbt syntax in ADR code example

Update ADR 0003 to use 'run / javaOptions' instead of 'javaOptions in run'
to match the actual implementation in build.sbt and modern sbt conventions.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

* docs: use version variable for async-profiler download

Use ASYNC_PROFILER_VERSION variable in download commands for easier
version maintenance. This fixes the inconsistency between using /latest/
in the URL path and hardcoding version 3.0 in the filename.

Addresses PR review feedback.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>

---------

Co-authored-by: swifthorseman <swifthorseman@users.noreply.github.com>
Co-authored-by: Claude <noreply@anthropic.com>